--- a/TrangChu/Trang chủ - Tin nổi bật và Tin mới.html
+++ b/TrangChu/Trang chủ - Tin nổi bật và Tin mới.html
@@ -34,13 +34,26 @@
         gap: 15px; /* Khoảng cách giữa các ô */
       }
       .news-box-tctnb {
+        font-size: 22px;
+        font-weight: 600;
         padding: 20px;
         text-align: center;
         color: white;
         display: flex;
         align-items: center;
         justify-content: center;
-        min-height: 150px; /* Đảm bảo các ô có chiều cao tối thiểu */
+        min-height: 150px;
+      }
+      .news-box-tctnb p {
+        margin: 0;
+        font-weight: 600;
+        color: #0d4c92;
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        word-break: break-word;
       }
       .news-box-tctnb p {
         margin: 0;
@@ -111,12 +124,22 @@
         .right-content-tctnb {
           grid-template-columns: 1fr; /* Chuyển thành 1 cột */
         }
+        .news-box-tctnb {
+          font-size: 16px;
+          text-align: left;
+          -webkit-line-clamp: 4;
+        }
+        .title-tnb-trangchu {
+          font-size: 18px !important;
+          max-height: 109px !important;
+          -webkit-line-clamp: 3 !important;
+        }
       }
       .title-tnb-trangchu {
         font-family: Roboto;
         font-size: 22px;
         font-weight: 600;
-        line-height: 28.6px;
+        line-height: 32.6px;
         letter-spacing: 0.0125em;
         text-align: left;
         text-underline-position: from-font;
@@ -135,13 +158,16 @@
         text-overflow: ellipsis;
         word-break: break-word;
         white-space: normal;
-        max-height: 70.2px;
+        max-height: 80.2px;
       }
 
       .main-image-tctnb:hover .title-tnb-trangchu {
         background: #0d4c92;
         color: white;
         transition: all 0.9s ease;
+      }
+      .img-second-tctnb {
+        display: none;
       }
     </style>
   </head>
@@ -152,8 +178,10 @@
           <img
             src="https://s3-alpha-sig.figma.com/img/b816/4ffe/e3e49cda3c96e98ec692f7b66e3c35de?Expires=1736121600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=B2-OZ9o7zLnaTtc-KG6RkUkfA-Wy0BvlzKZeZ6pD8qyTdGd-ntpIVFwL4-EX-HKO4sVxJBpy-H8W8H0QVxR-VnoDqPOsfEzPr6t~-Nuv9mqryNHq07mpROOI2pQZH-0XthQeNCcnpFIX~6MHw2UcHcSfVtBQLc5VH2Nb-ehBUSBmGxO93ba1lsYfF0L0BtGL~Ee2VTMErovUe83wwawNrAsrTQq1pQFbWircVFd3FnNiMzNfaMag7MwJxKI8txFod0gk9bjmDWfRmkfOYAF8uKtcCqY2VKNhVJeG736A6Pe-tNQqdakdm8ngMwfaybg4t7H1vj9nPjdCRejSDBl4mg__"
             alt="Ảnh Chính"
+            class="img-main-tctnb"
+            id="main-image"
           />
-          <p class="title-tnb-trangchu">
+          <p class="title-tnb-trangchu" id="main-title">
             Chủ tịch UBND TP.Hồ Chí Minh thăm, chúc mừng Lễ Giáng sinh và năm
             mới 2025 Chủ tịch UBND TP.Hồ Chí Minh thăm, chúc mừng Lễ Giáng sinh
             và năm mới 2025
@@ -162,26 +190,43 @@
 
         <div class="right-content-tctnb">
           <a href="" class="news-box-tctnb box-tctnb-1">
+            <img
+              src="https://hochiminhcity.gov.vn/documents/39403/0/bi+thu+2.jpg/03828e9a-ec23-62aa-9007-e5178b0d1845?t=1735210307357"
+              alt="Ảnh Chính"
+              class="img-second-tctnb"
+            />
             <p>
               Chủ tịch UBND TP.Hồ Chí Minh thăm, chúc mừng Lễ Giáng sinh và năm
-              mới 2025 Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Corrupti mollitia odio a ipsam earum, suscipit laudantium hic
-              maiores magnam alias sint culpa soluta beatae nihil! Magnam
-              voluptatem reprehenderit saepe et!
+              mới 2025 orem ipsum dolor sit amet consectetur adipisicing elit.
             </p>
           </a>
           <a href="" class="news-box-tctnb box-tctnb-2">
+            <img
+              src="https://s3-alpha-sig.figma.com/img/b816/4ffe/e3e49cda3c96e98ec692f7b66e3c35de?Expires=1736121600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=B2-OZ9o7zLnaTtc-KG6RkUkfA-Wy0BvlzKZeZ6pD8qyTdGd-ntpIVFwL4-EX-HKO4sVxJBpy-H8W8H0QVxR-VnoDqPOsfEzPr6t~-Nuv9mqryNHq07mpROOI2pQZH-0XthQeNCcnpFIX~6MHw2UcHcSfVtBQLc5VH2Nb-ehBUSBmGxO93ba1lsYfF0L0BtGL~Ee2VTMErovUe83wwawNrAsrTQq1pQFbWircVFd3FnNiMzNfaMag7MwJxKI8txFod0gk9bjmDWfRmkfOYAF8uKtcCqY2VKNhVJeG736A6Pe-tNQqdakdm8ngMwfaybg4t7H1vj9nPjdCRejSDBl4mg__"
+              alt="Ảnh Chính"
+              class="img-second-tctnb"
+            />
             <p>
               Lãnh đạo TP.Hồ Chí Minh gặp mặt cán bộ cao cấp quân đội nghỉ
               hưu...
             </p>
           </a>
           <a href="" class="news-box-tctnb box-tctnb-3">
+            <img
+              src="https://s3-alpha-sig.figma.com/img/b816/4ffe/e3e49cda3c96e98ec692f7b66e3c35de?Expires=1736121600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=B2-OZ9o7zLnaTtc-KG6RkUkfA-Wy0BvlzKZeZ6pD8qyTdGd-ntpIVFwL4-EX-HKO4sVxJBpy-H8W8H0QVxR-VnoDqPOsfEzPr6t~-Nuv9mqryNHq07mpROOI2pQZH-0XthQeNCcnpFIX~6MHw2UcHcSfVtBQLc5VH2Nb-ehBUSBmGxO93ba1lsYfF0L0BtGL~Ee2VTMErovUe83wwawNrAsrTQq1pQFbWircVFd3FnNiMzNfaMag7MwJxKI8txFod0gk9bjmDWfRmkfOYAF8uKtcCqY2VKNhVJeG736A6Pe-tNQqdakdm8ngMwfaybg4t7H1vj9nPjdCRejSDBl4mg__"
+              alt="Ảnh Chính"
+              class="img-second-tctnb"
+            />
             <p>
               Triển khai nhiều giải pháp hỗ trợ doanh nghiệp TPHCM tiếp cận vốn
             </p>
           </a>
           <a href="" class="news-box-tctnb box-tctnb-4">
+            <img
+              src="https://s3-alpha-sig.figma.com/img/b816/4ffe/e3e49cda3c96e98ec692f7b66e3c35de?Expires=1736121600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=B2-OZ9o7zLnaTtc-KG6RkUkfA-Wy0BvlzKZeZ6pD8qyTdGd-ntpIVFwL4-EX-HKO4sVxJBpy-H8W8H0QVxR-VnoDqPOsfEzPr6t~-Nuv9mqryNHq07mpROOI2pQZH-0XthQeNCcnpFIX~6MHw2UcHcSfVtBQLc5VH2Nb-ehBUSBmGxO93ba1lsYfF0L0BtGL~Ee2VTMErovUe83wwawNrAsrTQq1pQFbWircVFd3FnNiMzNfaMag7MwJxKI8txFod0gk9bjmDWfRmkfOYAF8uKtcCqY2VKNhVJeG736A6Pe-tNQqdakdm8ngMwfaybg4t7H1vj9nPjdCRejSDBl4mg__"
+              alt="Ảnh Chính"
+              class="img-second-tctnb"
+            />
             <p>
               Triển khai nhiều giải pháp hỗ trợ doanh nghiệp TPHCM tiếp cận vốn
             </p>
@@ -191,5 +236,37 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const newsBoxes = document.querySelectorAll(".news-box-tctnb");
+        const mainImage = document.getElementById("main-image");
+        const mainTitle = document.getElementById("main-title");
+        const mainLink = document.querySelector(".main-image-tctnb");
+
+        newsBoxes.forEach((box) => {
+          box.addEventListener("mouseover", function () {
+            const imageSrc = this.querySelector(".img-second-tctnb").src;
+            const titleText = this.querySelector("p").textContent;
+            const linkHref = this.closest("a").href;
+
+            mainImage.src = imageSrc;
+            mainTitle.textContent = titleText;
+            mainLink.href = linkHref;
+          });
+        });
+
+        if (newsBoxes.length > 0) {
+          const firstBox = newsBoxes[0];
+          const initialImageSrc =
+            firstBox.querySelector(".img-second-tctnb").src;
+          const initialTitleText = firstBox.querySelector("p").textContent;
+          const initialLinkHref = firstBox.closest("a").href;
+
+          mainImage.src = initialImageSrc;
+          mainTitle.textContent = initialTitleText;
+          mainLink.href = initialLinkHref;
+        }
+      });
+    </script>
   </body>
 </html>
