Ngày 28/12 Banner Chính quyền, Công dân

--- a/tintuc-sukien/video da phuong tien tin tức sự kiện.html
+++ b/tintuc-sukien/video da phuong tien tin tức sự kiện.html
@@ -4,7 +4,7 @@
       controls=""
       loop=""
       muted=""
-      poster="anh-thumbnail.jpg"
+      poster="/documents/39403/2315666/%E1%BA%A3nh_congbo.png/0f339135-0148-c36c-983a-ebb9f4ab342f?t=1735308182428"
       role="button"
       class="video-dpt"
     >
@@ -13,7 +13,6 @@
         type="video/mp4"
       />
     </video>
-
     <h3 class="title-video-dpt title-main-video">
       CÔNG BỐ CỔNG THÔNG TIN MỚI THÀNH PHỐ HỒ CHÍ MINH
     </h3>
@@ -24,7 +23,7 @@
       controls=""
       loop=""
       muted=""
-      poster="anh-thumbnail.jpg"
+      poster="/documents/39403/2315666/hcmc+metro.png/42298f44-fecf-e775-531d-9ae1f50583b4?t=1735308183178"
       role="button"
       class="video-dpt-second"
     >
@@ -42,8 +41,7 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     gap: 10px; /* Adjust the gap between videos as needed */
-    background-color: #f9f9f9; /* Optional: Background for the container */
-    padding: 10px; /* Optional: Padding for the container */
+    background-color: #f9f9f9;
   }
 
   .video-main {
@@ -62,7 +60,7 @@
   }
 
   .title-video-dpt {
-    background-color: #f9f9f9;
+    background-color: #e0e0e0;
     color: #0d4c92;
     text-align: center;
     padding: 12px;
@@ -89,6 +87,48 @@
       font-size: 14px;
       padding: 6px;
     }
+    .component-tabs-custom {
+      display: none !important;
+    }
+    .mr-3 {
+      margin-right: 0 !important;
+    }
+    .ml-3 {
+      margin-left: 0 !important;
+    }
+    .col-lg-9 {
+      padding: 0 6px !important;
+    }
+    .col-lg-3 {
+      padding: 0 6px !important;
+    }
+    .col-xl-3 {
+      padding: 0 6px !important;
+    }
+    .col-xl-9 {
+      padding: 0 6px !important;
+    }
+    .pr-3 {
+      padding-right: 6px !important;
+    }
+    .pl-3 {
+      padding-left: 6px !important;
+    }
+    .mr-4 {
+      margin-right: 0 !important;
+    }
+    .mr-5 {
+      margin-right: 0 !important;
+    }
+    .ml-4 {
+      margin-left: 0 !important;
+    }
+    .pl-4 {
+      padding-left: 6px !important;
+    }
+    .pr-4 {
+      padding-right: 6px !important;
+    }
   }
 
   /* Tablet - 426px - 768px */
@@ -108,6 +148,9 @@
       font-size: 14px;
       padding: 6px;
     }
+    .component-tabs-custom {
+      display: none !important;
+    }
   }
 
   /* Tablet Pro - 769px - 1024px */
@@ -126,7 +169,7 @@
       font-size: 22px;
     }
     .video-dpt {
-      aspect-ratio: 10 / 9.4;
+      aspect-ratio: 9 / 8.75;
     }
     .video-dpt-second {
       aspect-ratio: 14 / 9.1;
@@ -145,7 +188,7 @@
       font-size: 20px;
     }
     .video-dpt {
-      aspect-ratio: 11 / 8.95;
+      aspect-ratio: 10 / 8.42;
     }
     .video-dpt-second {
       aspect-ratio: 14 / 9.1;
@@ -164,7 +207,7 @@
       font-size: 20px;
     }
     .video-dpt {
-      aspect-ratio: 11 / 8.95;
+      aspect-ratio: 10 / 8.42;
     }
     .video-dpt-second {
       aspect-ratio: 14 / 9.1;
@@ -183,11 +226,9 @@
       font-size: 22px;
     }
     .video-dpt {
-      aspect-ratio: 14 / 9.16;
+      aspect-ratio: 12 / 8.21;
     }
-    .video-dpt-second {
-      aspect-ratio: 14 / 8.1;
-    }
+
     .title-second-video {
       font-size: 16px;
     }
@@ -202,11 +243,9 @@
       font-size: 22px;
     }
     .video-dpt {
-      aspect-ratio: 14 / 9.16;
+      aspect-ratio: 12 / 8.21;
     }
-    .video-dpt-second {
-      aspect-ratio: 14 / 8.1;
-    }
+
     .title-second-video {
       font-size: 16px;
     }
@@ -216,7 +255,7 @@
   }
 
   .video-dpt-container {
-    background-color: #f9f9f9;
+    background-color: #e0e0e0;
   }
 
   .video-dpt-container:hover .title-video-dpt,
