--- a/tintuc-sukien/video da phuong tien trang chủ.html
+++ b/tintuc-sukien/video da phuong tien trang chủ.html
@@ -2,10 +2,9 @@
   <div class="video-dpt-container video-main">
     <video
       controls=""
-      autoplay="true"
       loop=""
       muted=""
-      poster="anh-thumbnail.jpg"
+      poster="/documents/39403/2315666/%E1%BA%A3nh_congbo.png/0f339135-0148-c36c-983a-ebb9f4ab342f?t=1735308182428"
       role="button"
       class="video-dpt"
     >
@@ -24,7 +23,7 @@
       controls=""
       loop=""
       muted=""
-      poster="anh-thumbnail.jpg"
+      poster="/documents/39403/2315666/hcmc+metro.png/42298f44-fecf-e775-531d-9ae1f50583b4?t=1735308183178"
       role="button"
       class="video-dpt-second"
     >
@@ -100,8 +99,35 @@
     .col-lg-9 {
       padding: 0 6px !important;
     }
-    .col-lg-9 {
+    .col-lg-3 {
       padding: 0 6px !important;
+    }
+    .col-xl-3 {
+      padding: 0 6px !important;
+    }
+    .col-xl-9 {
+      padding: 0 6px !important;
+    }
+    .pr-3 {
+      padding-right: 6px !important;
+    }
+    .pl-3 {
+      padding-left: 6px !important;
+    }
+    .mr-4 {
+      margin-right: 0 !important;
+    }
+    .mr-5 {
+      margin-right: 0 !important;
+    }
+    .ml-4 {
+      margin-left: 0 !important;
+    }
+    .pl-4 {
+      padding-left: 6px !important;
+    }
+    .pr-4 {
+      padding-right: 6px !important;
     }
   }
 
@@ -143,7 +169,7 @@
       font-size: 22px;
     }
     .video-dpt {
-      aspect-ratio: 12 / 9.1;
+      aspect-ratio: 10 / 8.75;
     }
     .video-dpt-second {
       aspect-ratio: 14 / 9.1;
@@ -162,7 +188,7 @@
       font-size: 20px;
     }
     .video-dpt {
-      aspect-ratio: 12 / 9.1;
+      aspect-ratio: 11 / 8.75;
     }
     .video-dpt-second {
       aspect-ratio: 14 / 9.1;
@@ -181,7 +207,7 @@
       font-size: 20px;
     }
     .video-dpt {
-      aspect-ratio: 12 / 9.1;
+      aspect-ratio: 11 / 8.75;
     }
     .video-dpt-second {
       aspect-ratio: 14 / 9.1;
@@ -200,11 +226,9 @@
       font-size: 22px;
     }
     .video-dpt {
-      aspect-ratio: 12 / 8.8;
+      aspect-ratio: 12 / 8.48;
     }
-    .video-dpt {
-      aspect-ratio: 14 / 8.8;
-    }
+
     .title-second-video {
       font-size: 16px;
     }
@@ -219,11 +243,9 @@
       font-size: 22px;
     }
     .video-dpt {
-      aspect-ratio: 12 / 8.8;
+      aspect-ratio: 12 / 8.48;
     }
-    .video-dpt {
-      aspect-ratio: 14 / 8.8;
-    }
+
     .title-second-video {
       font-size: 16px;
     }
